==> JasonHuang-git/MainControl-DriverCode/Project_Demo - 20190811 - 副本/HARDWARE/ESP8266/bsp_esp8266.c <==
#include <bsp_esp8266.h>

void USART_printf(USART_TypeDef * USARTx_, char * Data, ... )
{
	const char *s;
	int d;
	char buf[16];
	uint8_t txdata;

	// 需要包含stdarg.h
	va_list ap;
	va_start(ap, Data);
	while(*Data != 0 )     	 // 判断是否到达字符串结束符
	{
		if(*Data == 0x5c)  	 // 判断是否收到了转移字符'\'
		{
			switch ( *++Data )
			{
			case 'r':							          // 发送回车符
				txdata = 0x0d;
				USART_SendData(USARTx_, txdata);
				Data ++;
				break;
			case 'n':							          // 发送换行符
				txdata = 0x0a;
				USART_SendData(USARTx_, txdata);
				Data ++;
				break;
			default:
				Data ++;
				break;
			}
		}
		else if(*Data == '%')
		{
			switch ( *++Data )
			{
			case 's':									  // 字符串
				s = va_arg(ap, const char *);
				for ( ; *s; s++)
				{
					USART_SendData(USARTx_, *s);
					while (USART_GetFlagStatus(USARTx_, USART_FLAG_TXE) == RESET);
				}
				Data++;
				break;
			case 'd':
				//十进制
				d = va_arg(ap, int);
				itoa(d, buf, 10);
				for (s = buf; *s; s++)
				{
					USART_SendData(USARTx_, *s);
					while (USART_GetFlagStatus(USARTx_, USART_FLAG_TXE) == RESET);
				}
				Data++;
				break;
			default:
				Data++;
				break;
			}
		}
		else
		{
			USART_SendData(USARTx_, *Data);
			Data++;
			while (USART_GetFlagStatus(USARTx_, USART_FLAG_TXE) == RESET);
		}
	}
}

void  ESP8266_stop( void )
{
	ESP8266_RST_LOW();

	USART_Cmd(ESP8266_USARTx, DISABLE);
	USART_DeInit(ESP8266_USARTx);
}

void ESP8266_Rst ( void )
{
#if 0
	ESP8266_Cmd ( "AT+RST", "OK", "ready", 2500 );
#else
	ESP8266_RST_LOW();
	delay_ms(500);
	ESP8266_RST_HIGH();
#endif
}

bool ESP8266_AT_Test(void)
{
	char count = 0;
	// 拉高复位引脚，退出复位
	ESP8266_RST_HIGH();
	delay_ms(1000);
	while (count < 10)
	{
		// 发送AT测试是否收到ESP8266的响应，如果没收到回复，则重测机制为尝试十次
		if (ESP8266_Cmd("AT", "OK", NULL, 1000))
		{
			return 1;
		}
		ESP8266_Rst();
		delay_ms(1000);
		++count;
	}
	return 0;
}
