==> jeffHODev/Hardware/hdyl/code/AOPWMG_GD_LCD_UART_SW_v1.2/src/bsp_esp8266.c <==
#include "main.h"
#include "bsp_esp8266.h"
#include "string.h"

void USART_printf(UART_HandleTypeDef * USARTx, char * Data, ... )
{
	const char *s;
	int d;   
	char buf[16];
	unsigned char tmp;
	va_list ap;
	va_start(ap, Data);
	while ( * Data != 0 )     // 判断是否到达字符串结束符
	{				                          
		if ( * Data == 0x5c )  //'\'
		{									  
			switch ( *++Data )
			{
				case 'r':	
					tmp = 0x0d;
					HAL_UART_Transmit(&huart2,&tmp,1,5);//回车符
					Data ++;
				break;
				case 'n':
					tmp = 0x0a;
					HAL_UART_Transmit(&huart2,&tmp,1,5);//换行符	
					Data ++;
				break;
				default:
					Data ++;
				break;
			}			 
		}
		else if ( * Data == '%')
		{									  //
			switch ( *++Data )
			{				
				case 's':										  //字符串
					s = va_arg(ap, const char *);
					for ( ; *s; s++) 
					{
						HAL_UART_Transmit(USARTx,(uint8_t *)s,1,1);
						//while( USART_GetFlagStatus(USARTx, USART_FLAG_TXE) == RESET );
					}				
					Data++;				
				break;
					
				case 'd':			
					//十进制
					d = va_arg(ap, int);					
					itoa(d, buf, 10);					
					for (s = buf; *s; s++) 
					{
						//USART_SendData(USARTx,*s);
						HAL_UART_Transmit(USARTx,(uint8_t *)s,1,1);
						//while( USART_GetFlagStatus(USARTx, USART_FLAG_TXE) == RESET );
					}					
					Data++;				
				break;
					
				default:
					Data++;				
				break;				
			}		 
		}		
		else HAL_UART_Transmit(USARTx,(uint8_t *)(Data++),1,1);//USART_SendData(USARTx, *Data++);
		//while ( USART_GetFlagStatus ( USARTx, USART_FLAG_TXE ) == RESET );
	}
}

void  ESP8266_stop( void )
{
	ESP8266_RST_LOW_LEVEL();
	#if CPU == ST
    __HAL_UART_DISABLE_IT(&huart2, UART_IT_IDLE);	//使能空闲中断
    __HAL_UART_DISABLE_IT(&huart2, UART_IT_RXNE);	//使能空闲中断    
	//HAL_UART_Receive_IT(&huart2, &res, 1);	  // 重新注册一次，要不然下次收不到了
#endif
  //  __HAL_UART_ENABLE_IT(&huart2, UART_IT_IDLE);	//使能空闲中断
    //HAL_UART_DMAStop(&huart2,modbus_usr.RS485_RX_BUFF,MODBUS_BSIZE);	
}

void ESP8266_Rst ( void )
{
#if 0
	 ESP8266_Cmd("AT+RST", "OK", "ready", 2500);   	
#else
	#if CPU == ST
	 HAL_GPIO_WritePin(WIFI_EN_GPIO_Port, WIFI_EN_Pin, GPIO_PIN_RESET);
	 HAL_Delay(500); 
	 HAL_GPIO_WritePin(WIFI_EN_GPIO_Port, WIFI_EN_Pin, GPIO_PIN_SET);
#endif	
#endif
}

bool ESP8266_AT_Test ( void )
{
	char count=0;
	
	ESP8266_RST_HIGH_LEVEL();	
	//HAL_Delay(1000);
	while(count<3)
	{
		if(ESP8266_Cmd("AT","OK",NULL,5)) return 1;
		ESP8266_Rst();
    HAL_Delay(1);
		++count;
	}
	return 0;
}
